# assistant

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agent/: activeContext.md  productContext.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
app/: main.py
app/api/routes/: __init__.py  assistant.py  files.py  home.py  search.py
app/config/: app.py  llamaindex.py  mcp.py
app/config/mcp/: config.json
app/core/agents/: base_agent.py  ollama_agent.py  openai_agent.py  prompts.py  state.py
app/core/llamaindex/: indexer.py  loader.py
app/core/llamaindex/loaders/: __init__.py  file.py
app/core/mcp/: btbox-meetings.py  btbox-search.py
app/db/: base.py
app/db/migrations/: env.py
app/db/migrations/versions/: initial_schema.py
app/models/: __init__.py  file_chunk.py  relationships.py  thread.py  user_config.py
app/repositories/: base.py  file_chunk.py  thread.py  user_config.py
app/schemas/: file_chunk.py  thread.py
app/scripts/: index_documents.py
app/services/: vector_store.py
documents/: btbox.xlsx
migrations/: env.py
src/assistant/: main.py
src/assistant/api/routes/: __init__.py  assistant.py  files.py  home.py  search.py
src/assistant/config/: app.py  database.py  gunicorn.py  llamaindex.py  mcp.py
src/assistant/config/llamaindex/: loaders.yaml
src/assistant/config/mcp/: config.json
src/assistant/core/: config.py  settings.py
src/assistant/core/agents/: base_agent.py  openai_agent.py  prompts.py  state.py  validated_tool_node.py
src/assistant/core/llamaindex/: indexer.py  loaders.py
src/assistant/core/llamaindex/loaders/: __init__.py  file.py  web.py
src/assistant/core/mcp/: btbox-search.py  btbox.py
src/assistant/db/: base.py  config.py
src/assistant/db/migrations/: env.py
src/assistant/db/migrations/versions/: initial_schema.py
src/assistant/models/: __init__.py  base.py  file_chunk.py  relationships.py  thread.py  user_config.py
src/assistant/repositories/: base.py  file_chunk.py  thread.py  user_config.py
src/assistant/schemas/: thread.py  user_config.py
src/assistant/scripts/: dev.py  index_documents.py  manage_user_config.py
src/assistant/services/: vector_store.py
