[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "AI Assistant project with FastAPI and LangChain"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.11"
python-dotenv = "^1.0.0"
pydantic = "^2.6.1"
aiostream = "^0.5.2"
cachetools = "^5.3.3"
llama-index = "^0.12.33"
rich = "^13.9.4"
sqlalchemy = "^2.0.39"
asyncpg = "^0.30.0"
llama-index-llms-ollama = "^0.5.4"
llama-index-vector-stores-postgres = "^0.4.2"
gunicorn = "^23.0.0"
psycopg = "^3.2.6"
langgraph = "^0.3.14"
langgraph-checkpoint-postgres = "^2.0.18"
langchain-ollama = "^0.2.3"
langchain-community = "^0.3.19"
python-multipart = "^0.0.20"
alembic = "^1.15.1"
types-requests = "^2.32.0.20250306"
langchain-openai = "^0.3.10"
llama-index-readers-web = "^0.3.9"
langchain-mcp-adapters = "^0.0.7"
llama-index-embeddings-ollama = "^0.6.0"
openpyxl = "^3.1.5"
pgvector = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
dev = "assistant.scripts.dev:main"
index_documents = "assistant.scripts.index_documents:cli"
manage_user_config = "assistant.scripts.manage_user_config:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 